--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
        <nav class="navbar">
     
     <ul class="table">
-      <li><a href="http://127.0.0.1:5501/R1.html">Home</a></li>
+      <li><a href="http://127.0.0.1:5501/index.html">Home</a></li>
       <li><a href="http://127.0.0.1:5501/menu.html">Menu</a></li>
       <li><a href="http://127.0.0.1:5501/gallery.html">Gallery</a></li>
       <li><a href="http://127.0.0.1:5501/Feedback.html">feedback</a></li>
@@ -273,3 +273,4 @@ Whether you're stopping by for a quick lunch, a family dinner, or a special cele
 
 </body>
 </html>
+
