--- a/index.html
+++ b/index.html
@@ -180,13 +180,13 @@ Whether you're stopping by for a quick lunch, a family dinner, or a special cele
     <div class="slides"> -->
       <img src="im1.jpg" alt="Slide 1"width="500px" height="589px">
       <img src="im2.jpg" alt="Slide 2"width="500px" height="589px">
-      <img src="im4" alt="Slide 4"width="500px" height="589px">
-      <img src="im5" alt="Slide 5"width="500px" height="589px">
-      <img src="im6" alt="Slide 6" width="500px" height="589px">
+      <img src="im4.jpg" alt="Slide 4"width="500px" height="589px">
+      <img src="im5.jpg" alt="Slide 5"width="500px" height="589px">
+      <img src="im6.jpg" alt="Slide 6" width="500px" height="589px">
       <img src="im7.jpg" alt="Slide 7"width="500px" height="589px">
       <img src="im8.jpg" alt="Slide 9"width="500px" height="589px">
       <img src="im9.jpg" alt="Slide 9"width="500px" height="589px">
-      <img src="im10" alt="Slide 10"width="500px" height="589px">
+      <img src="im10.jpg" alt="Slide 10"width="500px" height="589px">
       <img src="im11.jpg" alt="Slide 11"width="500px" height="589px">
     
     <!-- </div>
@@ -272,6 +272,7 @@ Whether you're stopping by for a quick lunch, a family dinner, or a special cele
 
 </body>
 </html>
+
 
 
 
